--- a/course/app/views/welcome/index.html.haml
+++ b/course/app/views/welcome/index.html.haml
@@ -14,7 +14,7 @@
         9.-12.7. 2015
         %br
         Karlova 25, Praha 1
-      = link_to 'registrace', new_subscriber_path, :class => 'btn btn-lg btn-success'
+      = link_to 'registrace zde', new_subscriber_path, :class => 'btn btn-lg btn-success'
 .container.home
   .row.uvod
     .col-md-4.text-center
