--- a/course/app/views/welcome/program.html.haml
+++ b/course/app/views/welcome/program.html.haml
@@ -36,13 +36,13 @@
     .col-md-12
       %div{:role => "tabpanel"}
         / Nav tabs
-        %ul#tabs.nav.nav-tabs{:role => "tablist"}
+        %ul#tabs.nav.nav-pills{:role => "tablist"}
           %li.active{:role => "presentation"}
-            %a{"aria-controls" => "intro", "data-toggle" => "tab", :href => "#intro", :role => "tab"} Intro
+            %a{"aria-controls" => "intro", "data-toggle" => "pill", :href => "#intro", :role => "tab"} Intro
           %li{:role => "presentation"}
-            %a{"aria-controls" => "workshop", "data-toggle" => "tab", :href => "#workshop", :role => "tab"} Workshop
+            %a{"aria-controls" => "workshop", "data-toggle" => "pill", :href => "#workshop", :role => "tab"} Workshop
           %li{:role => "presentation"}
-            %a{"aria-controls" => "maggie", "data-toggle" => "tab", :href => "#maggie", :role => "tab"} Maggie Kline
+            %a{"aria-controls" => "maggie", "data-toggle" => "pill", :href => "#maggie", :role => "tab"} Maggie Kline
         / Tab panes
         .tab-content
           #intro.tab-pane.active{:role => "tabpanel"}
@@ -55,7 +55,7 @@
                   %strong Práce s traumatem u dětí,
                   kteří nemají žádný výcvik v této metodě. Absolvování tohoto úvodu je podmínkou pro účast na třídenním workshopu Práce s traumatem u dětí.
                 %li Seznámíte se s teorií, základními principy a metodami somatického prožívání dle Petera Levina.
-                %li Účast na Intru lze využít také jako Ǔvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání.
+                %li Účast na Intru lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání.
                 %li Cena samotného Intra 2500,-
                 %li Cena za Intro + Workshop Práce s traumatem u dětí 10500,-
             .col-sm-6
@@ -87,7 +87,8 @@
                     %li Maggie bude učit jak přeměnit hru v SE aktivity s prvky cyklů nabití/vybití, které mohou dětem pomoci s trackováním, orientací, reakcí útoku/útěku, vybudováním hranic a integrací jejich rozrušení 
                     %li dotkneme se specifických témat Sexuálního traumatu, traumat způsobených lékařskými zákroky, stavech po nehodách či v důsledku ztráty
                     %li workshop zahrnuje teorii, videonahrávky i sebezkušenostní prožikové techniky využitelné pro individuální i skupinové práce s dětmi
-                %li workshop je určn pro psychology, pedagogy, terapeuty,rodiče a všechny kdo pracují s dětmi a také pro ty, kdo chtějí prohloubit své porozumění při práci s vnitřním dítětem u dospělých 
+                %li workshop je určn pro psychology, pedagogy, terapeuty, rodiče a všechny kdo pracují s dětmi a také pro ty, kdo chtějí prohloubit své porozumění při práci s vnitřním dítětem u dospělých
+                %li tento workshop splňuje podmínky postgraduálního workshopu pro praktikanty a asistenty SE  
                 %li Zajištěn překlad z AJ do ČJ
                 %li Cena samotného třídenního workshopu je 8500,-
                 %li Cena za Intro + Workshop Práce s traumatem u dětí 10500,-
