--- a/course/app/views/subscriber_mailer/registration_confirmation.html.haml
+++ b/course/app/views/subscriber_mailer/registration_confirmation.html.haml
@@ -1,5 +1,51 @@
 %p
+  Vážený pane/paní
   = @subscriber.lastname
   \,
+  %br
+  děkujeme za Vaši registraci a posíláme Vám informace k platbě a podmínky účasti.
 
-%p Děkujeme za Vaši registraci.
+%p
+  %strong CENA WORKSHOPU A PLATBY:
+
+%p
+  = "Zvolili jste variantu: #{@subscriber.participation}"
+  - a = ["#{@subscriber.participation}"]
+  - case a
+  - when 'Intro'
+    //- if @subscriber.participation.include?("Intro")
+    =render partial: 'intro', formats: :html
+  - when 'Workshop'
+    //- elsif @subscriber.participation.include?("Workshop")
+    =render partial: 'workshop', formats: :html
+  - when 'Intro + Workshop'
+    //- elsif @subscriber.participation.include?("Intro + workshop")
+    =render partial: 'intro_workshop', formats: :html
+
+%p 
+  Příslušnou zálohu zašlete na účet č.: 
+  %strong 123123123/123
+  nejpozději 
+  %strong do 30.4.2015.
+  Doplatek kurzovného zašlete na účet č.: 
+  %strong 123123123/123 
+  nejpozději 
+  %strong do 15.6. 2015.
+  Jako 
+  %strong variabilní symbol
+  obou plateb uveďte své 
+  %strong telefoní číslo.
+
+%p
+  %strong PODMÍNKY:
+
+%ol
+  %li
+    %strong Absolvování Intra
+    Pro účast na workshopu je povinné absolvování Intra nebo jiná předchozí zkušenost s metodou SE (Intro nebo výcvik).
+  %li
+    %strong Zrušení workshopu
+    Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 10.5.2015. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
+  %li
+    Úplné znění podmínek naleznete na adrese
+    = link_to "http://secourse.cz/podminky", "http://secourse.cz/podminky"
