--- a/course/app/views/subscriber_mailer/registration_confirmation.text.erb
+++ b/course/app/views/subscriber_mailer/registration_confirmation.text.erb
@@ -1,3 +1,37 @@
-<%= @subscriber.lastname %>,
+Vážený pane/paní <%= @subscriber.lastname %>,
 
-Děkujeme za Vaši registraci.
+děkujeme za Vaši registraci a posíláme Vám informace k platbě a podmínky účasti.
+
+
+CENA WORKSHOPU:
+
+Zvolili jste variantu: <%= @subscriber.participation %>
+
+<% a = @subscriber.participation %>
+<% case a 
+     when 'Intro' %>
+        | celková cena | záloha do 30.4. | doplatek do 15.6.
+Intro | 2 500 Kč     | 1 000 Kč        | 1 500 Kč   
+<% when 'Workshop' %>
+         | celková cena | záloha do 30.4. | doplatek do 15.6.
+Workshop | 8 500 Kč     | 3 000 Kč        | 5 500 Kč
+<% when 'Intro + workshop' %>
+                 | celková cena  | záloha do 30.4. | doplatek do 15.6.
+Intro + workshop | 10 500 Kč     | 4 000 Kč        | 6 500 Kč
+<% end %>
+
+Příslušnou zálohu zašlete na účet č.: 123123123/123 nejpozději do 30.4.2015.
+Doplatek kurzovného zašlete na účet č.: 123123123/123 nejpozději do 15.6. 2015.
+Jako variabilní symbol obou plateb uveďte své telefoní číslo.
+
+
+PODMÍNKY:
+
+Absolvování Intra
+ - Pro účast na workshopu je povinné absolvování Intra nebo jiná předchozí zkušenost s metodou SE (Intro nebo výcvik).
+
+Zrušení workshopu
+ - Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 10.5.2015. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
+
+Úplné znění podmínek
+ - naleznete na adrese http://secourse.cz/podminky
