--- a/course/app/views/subscribers/index.html.haml
+++ b/course/app/views/subscribers/index.html.haml
@@ -15,11 +15,13 @@
         %th Příjmení
         %th Email
         %th Telefon
+        %th Vzdělání
+        %th Profese
+        %th Fakturace
         %th Ulice
         %th Město
         %th PSČ
-        %th Vzdělání
-        %th Profese
+        %th IČ
         %th Intro
         %th Intro datum
         %th Výcvik
@@ -38,11 +40,13 @@
           %td= s.lastname
           %td= s.email
           %td= s.phone
+          %td= s.education
+          %td= s.profesion
+          %td= s.nazev
           %td= s.address
           %td= s.city
           %td= s.zip
-          %td= s.education
-          %td= s.profesion
+          %td= s.ico
           %td= s.intro
           %td= s.intro_date
           %td= s.training
