--- a/course/app/views/subscriber_mailer/registration_confirmation.html.haml
+++ b/course/app/views/subscriber_mailer/registration_confirmation.html.haml
@@ -3,7 +3,7 @@
   = @subscriber.lastname
   \,
   %br
-  děkujeme za Vaši registraci a posíláme Vám informace k platbě a podmínky účasti.
+  děkujeme za Vaši registraci na workshop s Maggie Kline Práce s traumatem u dětí 9.-12.7. 2015 v Praze. Níže Vám posíláme informace k platbě a podmínky účasti. 
 
 %p
   %strong CENA WORKSHOPU A PLATBY:
@@ -21,12 +21,12 @@
 
 %p 
   Příslušnou zálohu zašlete na účet č.: 
-  %strong 123123123/123
+  %strong 2500029896/2010
   nejpozději 
   %strong do 30.4.2015.
   %br
   Doplatek kurzovného zašlete na účet č.: 
-  %strong 123123123/123 
+  %strong 2500029896/2010
   nejpozději 
   %strong do 15.6. 2015.
   %br
@@ -50,3 +50,16 @@
   %li
     Úplné znění podmínek naleznete na adrese
     = link_to "http://secourse.cz/podminky", "http://secourse.cz/podminky"
+
+   
+%p  
+  Podrobnější informace k harmonogramu obdržíte na Váš mail v pozvánce před konáním worksopu. Vaše dotazy ke kurzu i platbám směřujte taktéž na tento mail.
+%p
+  Na setkání s Vámi se těší tým organizátorek:
+%p  
+  %strong Ing. Zlata Koštejnová: 
+  tel 777 626 514, 
+  %strong Mgr. Michaela Čápová: 
+  tel 739 019 623
+  %strong a Mgr. Tereza Koryntová: 
+  tel 732 743 818
