--- a/course/app/views/welcome/_footer.html.haml
+++ b/course/app/views/welcome/_footer.html.haml
@@ -4,3 +4,6 @@
       .col-md-4.col-md-offset-4.text-center
         %p
           footer
+      .col-md-4.text-right
+        %p
+          =link_to "admin", subscribers_path
