--- a/course/app/views/welcome/index.html.haml
+++ b/course/app/views/welcome/index.html.haml
@@ -9,7 +9,8 @@
         %span
           SOMATIC EXPERIENCING
           %sup &reg;
-          \/ SOMATICKÉ PROŽÍVÁNÍ
+          FOR KIDS
+          \/ SOMATICKÉ PROŽÍVÁNÍ U DĚTÍ
       %h2
         9.-12.7. 2015
         %br
@@ -18,7 +19,8 @@
 .container.home
   .row.uvod
     .col-md-4.text-center
-      %i.fa.fa-pencil-square-o.fa-4x
+      .icon-wrapper
+        %i.fa.fa-pencil-square-o
       %h2
         Intro
         %span
@@ -33,7 +35,8 @@
         kteří nemají žádný výcvik v této metodě.
       = link_to 'více informací viz program', program_path, :class => 'btn btn-primary'
     .col-md-4.text-center
-      %i.fa.fa-users.fa-4x
+      .icon-wrapper
+        %i.fa.fa-users
       %h2
         Workshop
         %span
@@ -44,11 +47,12 @@
         usnadnit uvolnění a dokončení instinktivních obranných reakcí a znovuobnovit rovnováhu autonomního nervového systému a rozvinout tak zdravé vztahování, vyrovnanost a spokojenost dítěte.
       = link_to 'více informací viz program', program_path, :class => 'btn btn-primary'
     .col-md-4.text-center
-      %i.fa.fa-user.fa-4x
+      .icon-wrapper
+        %i.fa.fa-user
       %h2
         Maggie Kline (USA)
         %span
-          teraputka, trenérka, lektorka ...
+          terapeutka, trenérka, lektorka ...
       %p
         %strong
           Maggie Kline 
