--- a/course/app/assets/stylesheets/welcome.css.scss
+++ b/course/app/assets/stylesheets/welcome.css.scss
@@ -5,6 +5,8 @@
 $border-radius-base: 4px;
 $border-radius-large: 4px;
 $border-radius-small: 4px;
+$btn-primary-bg: #ff9c5b;
+$btn-success-bg: #ff9c5b;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -25,7 +27,7 @@ html, body {
 .text-vcenter > .inside {
   margin: 0 48px;
   padding: 48px 0;
-  background-color: rgba(206, 129, 71, 0.5);
+  background-color: rgba(252, 210, 138, 0.6);
 }
 
 .text-vcenter h1,.text-vcenter h2 {
@@ -52,7 +54,7 @@ html, body {
 }
 
 #home {
-  background: url(tiger.jpg) no-repeat center center fixed; 
+  background: asset_path('tiger_optim.jpg') no-repeat center center fixed; 
   display: table;
   height: 100%;
   position: relative;
@@ -75,15 +77,32 @@ html, body {
 }
 
 .uvod h2 {
-  color: #3cb6b6;
+  color: #3cb6b6 ;
 }
 
-.uvod i, .program i {
-  margin-top: 48px;
-  border: 3px solid #f5f5f5;
+.icon-wrapper {
   border-radius: 50%;
+  display: inline-block;
+  margin: 48px auto 0;
+  position: relative;
+  text-align: center;
+  background: #fcd28a ;
+  font-size: 48px;
   padding: 24px;
-  color: rgba(206, 129, 71, 1);
+  line-height: 48px;
+  width: 96px;
+  height: 96px;
+}
+
+.uvod i, .program i, .info i {
+  color: #ff9c5b;
+}
+
+.info {
+  background-color: #f8f8f8;
+  margin-top: 48px;
+  margin-bottom: -48px;
+  padding: 0 0 48px 0;
 }
 
 .mt-48 {
@@ -111,6 +130,7 @@ a {
 
 a, a:hover, a:active, a:focus {
   outline: 0;
+  background: transparent;
 }
 
 p, ul, ol {
@@ -143,8 +163,9 @@ h6 {
 }
 
 h1.nadpis {
-  margin-bottom: 48px;
+  margin-bottom: 72px;
   position: relative;
+  line-height: 1.3;
 }
 
 .nadpis:after {
@@ -157,7 +178,7 @@ h1.nadpis {
   margin-left: -25px;
   position: absolute;
   width: 50px;
-  background-color: #3cb6b6;
+  background-color: #ff9c5b;
 }
 
 .navbar-default {
@@ -170,32 +191,41 @@ h1.nadpis {
 
 .navbar-brand {
   padding: 15px 10px;
+  color: #ffffff !important;
 }
 
 .navbar-default .navbar-nav > li > a{
-  color: #d6edff;
+  color: #ffffff;
   border-radius: 4px;
   padding: 4px 8px;
-  margin-top: 8px;
+  margin: 8px 4px 0 4px;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{
+  color: rgba(63,76,107,1);
+  background-color: rgba(67, 204, 204, 0.4) !important;
+  border-radius: 4px;
+  padding: 4px 8px;
+  margin: 8px 4px 0 4px;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-  background-color: #acd7ec !important;
+  background-color: #43cccc !important;
   color: rgba(63,76,107,1);
 }
 
 .panel {
   margin: 48px 0 !important;
   background-color: #fafafa;
-  border-color: #cdcdcd;
+  border-color: #ff9c5b;
   -webkit-box-shadow: 0px 1px 10px 0px rgba(50, 50, 50, 0.5);
   -moz-box-shadow:    0px 1px 10px 0px rgba(50, 50, 50, 0.5);
   box-shadow:         0px 5px 10px 0px rgba(50, 50, 50, 0.2);
 }
 
 .panel-heading, .panel-footer {
-  background-color: #3cb6b6 !important;
-  border-color: #cdcdcd !important;
+  background-color: #ff9c5b !important;
+  border-color: #ff9c5b !important;
 }
 
 .panel-heading > h1 {
@@ -239,7 +269,7 @@ h1.nadpis {
 
 footer {
   background-color: #f1f1f1;
-  margin: 48px 0 0;
+  margin-top: 48px;
   padding: 24px 0 0;
 }
 
@@ -266,4 +296,17 @@ p.help-block, .form-horizontal label, .form-horizontal p {
 
 .nav-tabs, .nav-pills {
     text-align:center;
+}
+
+.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+  background-color: #f36248;
+  color: white;
+}
+
+.nav-pills > li > a, .nav-pills > li > a:hover, .nav-pills > li > a:focus {
+  color: #f36248;
+}
+
+.nav-pills > li > a:hover, .nav-pills > li > a:focus {
+  background-color: #fcd28a ;
 }
