--- a/course/app/views/welcome/_menu.html.haml
+++ b/course/app/views/welcome/_menu.html.haml
@@ -1,14 +1,10 @@
 = navbar fixed: :top do
-  = navbar_header brand: "SE course", brand_link: root_path
+  = navbar_header brand: "Práce s traumatem u dětí - Maggie Klein", brand_link: root_path
   = navbar_collapse do
-    = navbar_group class: 'mainmenu pull-left', id: 'menu' do
+    = navbar_group align: 'right' do
       = navbar_item root_path do
         %span.glyphicon.glyphicon-home
       = navbar_item "Program", '/program'
       = navbar_item "Podmínky", '/podminky'
       = navbar_item new_subscriber_path do
         Registrace
-    = navbar_group align: 'right' do
-      = navbar_item subscribers_path do
-        Login
-
