--- a/course/app/views/layouts/application.html.haml
+++ b/course/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Práce s traumatem u dětí - Maggie Klein
+    %title Práce s traumatem u dětí - Maggie Kline
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     %link{:href => "https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,400italic&subset=latin-ext", :rel => "stylesheet", :type => "text/css"}
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
