css update, deleted erb from asset_path

--- a/course/app/assets/stylesheets/welcome.css.scss
+++ b/course/app/assets/stylesheets/welcome.css.scss
@@ -54,7 +54,7 @@ html, body {
 }
 
 #home {
-  background: url('<%= asset_path("tiger_optim.jpg") %>') no-repeat center center fixed; 
+  background: asset_path("tiger_optim.jpg") no-repeat center center fixed; 
   display: table;
   height: 100%;
   position: relative;
