css background image path update.

--- a/course/app/assets/stylesheets/welcome.css.scss
+++ b/course/app/assets/stylesheets/welcome.css.scss
@@ -54,7 +54,7 @@ html, body {
 }
 
 #home {
-  background: asset_path("tiger_optim.jpg") no-repeat center center fixed; 
+  background: image-url("tiger_optim.jpg") no-repeat center center fixed; 
   display: table;
   height: 100%;
   position: relative;
