Login values updated, css updated, podminky updated

--- a/course/app/assets/stylesheets/welcome.css.scss
+++ b/course/app/assets/stylesheets/welcome.css.scss
@@ -5,8 +5,8 @@
 $border-radius-base: 4px;
 $border-radius-large: 4px;
 $border-radius-small: 4px;
-$btn-primary-bg: #ff9c5b;
-$btn-success-bg: #ff9c5b;
+$btn-primary-bg: #3cb6b6;
+$btn-success-bg: #f36248;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -35,18 +35,18 @@ html, body {
   line-height: 1.5em;
   font-weight: 700;
   margin: 0;
-  color: white; 
+  color: #400000; 
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
   padding: 0;
 }
 
 .text-vcenter h1 > span {
-  font-size: 0.7em;
+  font-size: 0.6em;
 }
 
 .text-vcenter h2 {
   font-size: 3em;
-  color: #fff;
+  color: #400000;
 }
 
 .text-vcenter .btn {
@@ -95,7 +95,7 @@ html, body {
 }
 
 .uvod i, .program i, .info i {
-  color: #ff9c5b;
+  color: #f36248;
 }
 
 .info {
@@ -178,7 +178,7 @@ h1.nadpis {
   margin-left: -25px;
   position: absolute;
   width: 50px;
-  background-color: #ff9c5b;
+  background-color: #f36248;
 }
 
 .navbar-default {
@@ -217,15 +217,15 @@ h1.nadpis {
 .panel {
   margin: 48px 0 !important;
   background-color: #fafafa;
-  border-color: #ff9c5b;
+  border-color: #3cb6b6;
   -webkit-box-shadow: 0px 1px 10px 0px rgba(50, 50, 50, 0.5);
   -moz-box-shadow:    0px 1px 10px 0px rgba(50, 50, 50, 0.5);
   box-shadow:         0px 5px 10px 0px rgba(50, 50, 50, 0.2);
 }
 
 .panel-heading, .panel-footer {
-  background-color: #ff9c5b !important;
-  border-color: #ff9c5b !important;
+  background-color: #3cb6b6 !important;
+  border-color: #3cb6b6 !important;
 }
 
 .panel-heading > h1 {
@@ -309,4 +309,17 @@ p.help-block, .form-horizontal label, .form-horizontal p {
 
 .nav-pills > li > a:hover, .nav-pills > li > a:focus {
   background-color: #fcd28a ;
+}
+
+.btn-circle {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+    border: 2px solid #ffffff;
+    border-radius: 35px;
+    color: #ffffff;
+    font-size: 40px;
+    height: 70px;
+    margin-top: 15px;
+    padding: 7px 16px;
+    transition: background 0.3s ease-in-out 0s;
+    width: 70px;
 }
