--- a/course/app/views/subscriber_mailer/registration_confirmation.html.haml
+++ b/course/app/views/subscriber_mailer/registration_confirmation.html.haml
@@ -20,12 +20,12 @@
     =render partial: 'intro_workshop'
 
 %p 
-  Příslušnou zálohu zašlete na účet č.: 
+  Celé kurzovné nebo příslušnou zálohu zašlete na účet č.: 
   %strong 2500029896/2010
   nejpozději 
   %strong do 30.4.2015.
   %br
-  Doplatek kurzovného zašlete na účet č.: 
+  Pokud jste se rozhodli pro platbu zálohy, doplatek kurzovného zašlete na účet č.: 
   %strong 2500029896/2010
   nejpozději 
   %strong do 15.6. 2015.
