--- a/course/app/views/subscriber_mailer/registration_confirmation.text.erb
+++ b/course/app/views/subscriber_mailer/registration_confirmation.text.erb
@@ -20,8 +20,8 @@ Workshop | 8 500 Kč     | 3 000 Kč        | 5 500 Kč
 Intro + workshop | 10 500 Kč     | 4 000 Kč        | 6 500 Kč
 <% end %>
 
-Příslušnou zálohu zašlete na účet č.: 123123123/123 nejpozději do 30.4.2015.
-Doplatek kurzovného zašlete na účet č.: 123123123/123 nejpozději do 15.6. 2015.
+Celé kurzovné nebo příslušnou zálohu zašlete na účet č.: 123123123/123 nejpozději do 30.4.2015.
+Pokud jste se rozhodli pro platbu zálohy, doplatek kurzovného zašlete na účet č.: 123123123/123 nejpozději do 15.6. 2015.
 Jako variabilní symbol obou plateb uveďte své telefoní číslo.
 
 
