--- a/course/app/views/welcome/_menu.html.haml
+++ b/course/app/views/welcome/_menu.html.haml
@@ -1,5 +1,5 @@
 = navbar fixed: :top do
-  = navbar_header brand: "Práce s traumatem u dětí - Maggie Klein", brand_link: root_path
+  = navbar_header brand: "Práce s traumatem u dětí - Maggie Kline", brand_link: root_path
   = navbar_collapse do
     = navbar_group align: 'right' do
       = navbar_item root_path do
