--- a/course/app/views/welcome/index.html.haml
+++ b/course/app/views/welcome/index.html.haml
@@ -16,6 +16,10 @@
         %br
         Karlova 25, Praha 1
       = link_to 'registrace zde', new_subscriber_path, :class => 'btn btn-lg btn-success'
+      %h4
+        další info
+        %br
+        %i.fa.fa-angle-double-down
 .container.home
   .row.uvod
     .col-md-4.text-center
