--- a/course/app/views/welcome/podminky.html.haml
+++ b/course/app/views/welcome/podminky.html.haml
@@ -11,9 +11,9 @@
         %li
           %p
             %strong Cena a záloha
-          %p Cena za jednodenní "Intro" činí 2 500 Kč. Registraci a zaplacení zálohy 1 000 Kč je třeba provést nejpozději do 30.4.2015.
-          %p Cena za třídenní workshop "Práce s traumatem u dětí" činí 8 500 Kč. Registraci a zaplacení zálohy 3 000 Kč je třeba provést nejpozději do 30.4.2015.
-          %p Cena za celou akci (Intro+workshop) činí 10 500Kč. Registraci a zaplacení zálohy 4 000 Kč je třeba provést nejpozději do 30.4.2015.
+          %p Cena za jednodenní "Intro" činí 2 500 Kč. Registraci a zaplacení kurzovného nebo minimálně zálohy 1 000 Kč je třeba provést nejpozději do 30.4.2015.
+          %p Cena za třídenní workshop "Práce s traumatem u dětí" činí 8 500 Kč. Registraci a zaplacení kurzovného nebo minimálně zálohy 3 000 Kč je třeba provést nejpozději do 30.4.2015.
+          %p Cena za celou akci (Intro+workshop) činí 10 500Kč. Registraci a zaplacení kurzovného nebo minimálně zálohy 4 000 Kč je třeba provést nejpozději do 30.4.2015.
           %p Zálohy jsou po 30.4.2015 nevratné, a to i při zrušení účasti.
           %table.table-striped.table-bordered.table
             %tr
@@ -23,13 +23,13 @@
               %th Intro + workshop
               
             %tr
-              %td celková cena
+              %td celková cena do 30.4.
               %td 2 500 Kč
               %td 8 500 Kč
               %td 10 500 Kč
 
             %tr
-              %td záloha do 30.4.
+              %td minimálně záloha do 30.4.
               %td 1 000 Kč
               %td 3 000 Kč
               %td 4 000 Kč
@@ -41,9 +41,9 @@
               %td 6 500 Kč
         %li
           %p
-            %strong Platba zálohy a doplatek
-          %p Příslušnou zálohu zašlete na účet č.: 2500029896/2010 nejpozději do 30.4.2015.
-          %p Doplatek kurzovného zašlete na účet č.: 2500029896/2010 nejpozději do 15.6. 2015.
+            %strong Platba kurzovného nebo (zálohy a doplatku)
+          %p Celé kurzovné nebo příslušnou zálohu zašlete na účet č.: 2500029896/2010 nejpozději do 30.4.2015.
+          %p Pokud jste se rozhodli pro platbu zálohy, zašlete doplatek kurzovného na účet č.: 2500029896/2010 nejpozději do 15.6. 2015.
           %p Jako variabilní symbol obou plateb uveďte své telefoní číslo.
         %li
           %p
