--- a/course/app/views/welcome/program.html.haml
+++ b/course/app/views/welcome/program.html.haml
@@ -23,9 +23,9 @@
           %td 9. - 12.7.2015
 
         %tr
-          %td Pro ty chtějí jenom Intro
-          %td Pro ty co už mají intro
-          %td Pro ty dosud nemají intro
+          %td Chci pouze Intro
+          %td Chci pouze Workshop
+          %td Chci Into + Workshop
 
         %tr
           %td 2 500 Kč
@@ -59,9 +59,8 @@
                   %strong Práce s traumatem u dětí,
                   kteří nemají žádný výcvik v této metodě. Absolvování tohoto úvodu je podmínkou pro účast na třídenním workshopu Práce s traumatem u dětí.
                 %li Seznámíte se s teorií, základními principy a metodami somatického prožívání dle Petera Levina.
-                %li Účast na Intru lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání.
                 %li Cena samotného Intra 2500,-
-                %li Cena za Intro + Workshop Práce s traumatem u dětí 10500,-
+                %li Cena za Intro + Workshop Práce s traumatem u dětí 10500,-. Účast na celém programu lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání.
             .col-sm-6
               %h3
                 SE
@@ -88,14 +87,13 @@
                     %li dozvíte se jak napravit rané trauma a attachment a skrze sociální kontakt obnovit seberegulaci
                     %li vyzkoušíte si techniky které napomáhají prohloubení uzemnění, smyslového vnímání a nástroje pro trackování u dětí a dospívajících
                     %li ukážeme si jak lze využít propojení principů SE s výtvarnými tehnikami k podpořit pocit bezpečí skrze titraci a pendulaci
-                    %li Maggie bude učit jak přeměnit hru v SE aktivity s prvky cyklů nabití/vybití, které mohou dětem pomoci s trackováním, orientací, reakcí útoku/útěku, vybudováním hranic a integrací jejich rozrušení 
-                    %li dotkneme se specifických témat Sexuálního traumatu, traumat způsobených lékařskými zákroky, stavech po nehodách či v důsledku ztráty
+                    %li Maggie bude učit jak přeměnit hru v SE aktivity s prvky cyklů nabití/vybití, které mohou dětem pomoci s trackováním, orientací, reakcí útoku/útěku, vybudováním hranic a s integrací stavů přílišného rozrušení 
+                    %li budeme se zabývat specifickými tématy: např. sexuální traumata, traumata způsobená lékařskými zákroky, stavy po nehodách či trauma v důsledku ztráty
                     %li workshop zahrnuje teorii, videonahrávky i sebezkušenostní prožikové techniky využitelné pro individuální i skupinové práce s dětmi
                 %li workshop je určn pro psychology, pedagogy, terapeuty, rodiče a všechny kdo pracují s dětmi a také pro ty, kdo chtějí prohloubit své porozumění při práci s vnitřním dítětem u dospělých
-                %li tento workshop splňuje podmínky postgraduálního workshopu pro praktikanty a asistenty SE  
                 %li Zajištěn překlad z AJ do ČJ
-                %li Cena samotného třídenního workshopu je 8500,-
-                %li Cena za Intro + Workshop Práce s traumatem u dětí 10500,-
+                %li Cena samotného třídenního workshopu je 8500,-. Tento workshop splňuje podmínky postgraduálního workshopu pro praktikanty a asistenty SE.  
+                %li Cena za Intro + Workshop Práce s traumatem u dětí 10500,-. Účast na celém programu lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání. 
             .col-sm-6
               %p
                 %strong Maggie Kline 
