--- a/course/app/views/welcome/_menu.html.haml
+++ b/course/app/views/welcome/_menu.html.haml
@@ -8,3 +8,4 @@
       = navbar_item "Podmínky", '/podminky'
       = navbar_item new_subscriber_path do
         Registrace
+      = navbar_item "Kontakt", '/kontakt'
