--- a/course/app/views/welcome/program.html.haml
+++ b/course/app/views/welcome/program.html.haml
@@ -1,3 +1,6 @@
+.container-fluid.mt-48
+  .row
+    #program
 .container.program
   .row
     .col-md-12.text-center
@@ -6,7 +9,9 @@
       %h1.nadpis Program workshopu a cena
     .col-md-6
       %p
-        Workshop je rozdělen do dvou částí, přičemž pro účast na workshopu je nutné mít absolvované Intro, nebo výcvik v SE. Intro lze absolvovat před workshopem nebo uznáme dříve absolvovaná Intra.
+        Workshop je rozdělen do dvou částí, přičemž 
+        %strong pro účast na workshopu je nutné mít absolvované Intro, nebo výcvik v SE.
+        Intro lze absolvovat před workshopem nebo uznáme dříve absolvovaná Intra.
       %ol
         %li Intro - je určeno pro ty, kteří dosud nemají výcvik v metodě SE
         %li Vlastní workshop
@@ -25,7 +30,7 @@
         %tr
           %td Chci pouze Intro
           %td Chci pouze Workshop
-          %td Chci Into + Workshop
+          %td Chci Intro + Workshop
 
         %tr
           %td 2 500 Kč
@@ -59,8 +64,7 @@
                   %strong Práce s traumatem u dětí,
                   kteří nemají žádný výcvik v této metodě. Absolvování tohoto úvodu je podmínkou pro účast na třídenním workshopu Práce s traumatem u dětí.
                 %li Seznámíte se s teorií, základními principy a metodami somatického prožívání dle Petera Levina.
-                %li Cena samotného Intra 2500,-
-                %li Cena za Intro + Workshop Práce s traumatem u dětí 10500,-. Účast na celém programu lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání.
+                %li Účast na celém programu lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání.
             .col-sm-6
               %h3
                 SE
@@ -71,7 +75,7 @@
                   \/ Somatické prožívání
                 je jedním z nejefektivnějších nástrojů pro léčení traumatu vyučovaný po celém světě. Je to přístup umožňující terapeutovi provést klienta náročnými stavy a situacemi. Somatické prožívání není jen psychoterapeutická metoda, ale velmi specifická práce s tělem a nervovým systémem. Nabízí základní přístup k porozumění a zvládání následků šoku a traumatu. Metoda tělesného prožívání umožňuje dokončení vrozených obranných reakcí nervového systému, které směřují k obnovení rovnováhy systému. Somatické prožívání nabízí nástroje, jak projít traumatem a žít plnohodnotným a jistějších životem a podporuje uvolnění posttraumatického stresu. 
                 %br
-                = link_to 'www.somatic-experiencing.cz', :href => 'http://somatic-experiencing.cz/'
+                = link_to 'www.somatic-experiencing.cz', 'http://somatic-experiencing.cz/'
           #workshop.tab-pane{:role => "tabpanel"}
             .col-sm-12
               %h3
@@ -83,17 +87,17 @@
                   %strong Práce s traumatem u dětí, 
                   je určen pro ty, kteří absolvovali Intro - Úvod do základů metody somatického prožívání nebo již mají výcvik v této metodě.
                   %ul
-                    %li seznámíte se s tématiku vývojoých stádií dítěte z hlediska somatického prožívání 
+                    %li seznámíte se s tématiku vývojových stádií dítěte z hlediska somatického prožívání 
                     %li dozvíte se jak napravit rané trauma a attachment a skrze sociální kontakt obnovit seberegulaci
                     %li vyzkoušíte si techniky které napomáhají prohloubení uzemnění, smyslového vnímání a nástroje pro trackování u dětí a dospívajících
                     %li ukážeme si jak lze využít propojení principů SE s výtvarnými tehnikami k podpořit pocit bezpečí skrze titraci a pendulaci
                     %li Maggie bude učit jak přeměnit hru v SE aktivity s prvky cyklů nabití/vybití, které mohou dětem pomoci s trackováním, orientací, reakcí útoku/útěku, vybudováním hranic a s integrací stavů přílišného rozrušení 
                     %li budeme se zabývat specifickými tématy: např. sexuální traumata, traumata způsobená lékařskými zákroky, stavy po nehodách či trauma v důsledku ztráty
                     %li workshop zahrnuje teorii, videonahrávky i sebezkušenostní prožikové techniky využitelné pro individuální i skupinové práce s dětmi
-                %li workshop je určn pro psychology, pedagogy, terapeuty, rodiče a všechny kdo pracují s dětmi a také pro ty, kdo chtějí prohloubit své porozumění při práci s vnitřním dítětem u dospělých
+                %li workshop je určen pro psychology, pedagogy, terapeuty, rodiče a všechny kdo pracují s dětmi a také pro ty, kdo chtějí prohloubit své porozumění při práci s vnitřním dítětem u dospělých
                 %li Zajištěn překlad z AJ do ČJ
-                %li Cena samotného třídenního workshopu je 8500,-. Tento workshop splňuje podmínky postgraduálního workshopu pro praktikanty a asistenty SE.  
-                %li Cena za Intro + Workshop Práce s traumatem u dětí 10500,-. Účast na celém programu lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání. 
+                %li Tento workshop splňuje podmínky postgraduálního workshopu pro praktikanty a asistenty SE.  
+                %li Účast na celém programu lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání. 
             .col-sm-6
               %p
                 %strong Maggie Kline 
