--- a/course/app/views/layouts/application.html.haml
+++ b/course/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
     = yield :head
-  %body.mt-48
+  %body
     = render partial: 'welcome/menu'
     = yield
     = render partial: 'welcome/footer'
