--- a/course/app/views/welcome/_footer.html.haml
+++ b/course/app/views/welcome/_footer.html.haml
@@ -3,7 +3,7 @@
     .row 
       .col-md-4.col-md-offset-4.text-center
         %p
-          footer
+          =link_to "kontakt", kontakt_path
       .col-md-4.text-right
         %p
-          =link_to "admin", subscribers_path
+          =link_to "admin", subscribers_path, :class => "login"
